--- a/style-600.css
+++ b/style-600.css
@@ -9,15 +9,17 @@ a {
 
 
 .principal {
-    background-image: url(/imagens/fundo.png);
-    background-size: 180vw;
+    /* background-image: url(/imagens/fundo.png); */
+    background-size: cover;
+    background-color: #000;
     background-repeat: no-repeat;
     background-position: center;
-    display: flex;
+    display: block;
     flex-direction: row;
-    width: 100vw;
     height: 100vh;
     font-family: 'Fira Sans', sans-serif;
+    padding: 20px;
+
 
 }
 
@@ -35,10 +37,10 @@ a {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1;
+    z-index: -1;
 }
 
-.esquerda {
+/* .esquerda {
     width: 70%;
     left: 0;
     align-items: center;
@@ -48,13 +50,13 @@ a {
 
 
 
-}
+} */
 
 .esquerda .titulo-master {
     margin-top: 0;
     margin-bottom: 0;
     color: #fff;
-    padding: 3rem;
+    padding: 2rem;
     border: 2px solid #fff;
 
 
@@ -62,14 +64,14 @@ a {
 
 .esquerda h1 {
     padding: 0;
-    font-size: 7em;
+    font-size: 4em;
     line-height: 1.2em;
     margin: 0;
     font-weight: 400;
 }
 .esquerda .titulo-master span {
     font-size: 2.3rem;
-    line-height: 0;
+    line-height: 1;
     padding: 0;
     margin: 0;
 
@@ -81,14 +83,13 @@ a {
     padding: 0 3rem 0 0;
     font-size: 1.6rem;
     font-weight: 400;
-    width: 450px;
     color: #fff;
 
 
 }
 
 .direita {
-    width: 50%;
+    margin-top: 140px;
     left: 0;
     align-items: flex-start;
     display: flex;
@@ -140,22 +141,25 @@ a {
 }
 
 .rodape {
-    display: flex;
+    display: none;
     background-color: #fff;
-    height: 100px;
-    padding: 3rem;
-    align-items: center;
-    justify-content: space-between;
     font-family: 'Fira Sans', sans-serif;
+    padding: 1rem;
+    justify-items: center;
 
 }
+
+.rodape img {
+    height: 50px;
+
+}
+
 
 .rodape i{
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-left: 10px;
-}
-
-    
+    margin-bottom: 30px;
+}   
 
 .rodape h4 {
     margin-left: 10px;
@@ -164,54 +168,11 @@ a {
     font-size: 0.6em;
 }
 
-.realizacao {
-    height: 120px;
-}
 
-.realizacao img {
-    width: 150px;
-    margin: 10px 0 10px 0;
-}
-
-.apoio {
-    border-left: solid 1px black;
-    height: 120px;
-    padding-left: 20px;
-
-
-}
-
-.apoio img {
-    width: 150px;
-    margin: 10px 0 10px 0;
-}
-
-.apoio-realizacao {
-    border-left: solid 1px black;
-    height: 120px;
-    padding-left: 20px;
-}
-
-.apoio-realizacao img {
-    background-color: black;
-    width: 150px;
-    margin: 10px 0 10px 0;
-}
 
 
 .fale-conosco {
-    padding-left: 20px;
+    text-align: center;
 }
 
-.fale-conosco img {
-    width: 100px;
-    display: block;
 
-
-}
-
-.open-source {
-    border-left: solid 1px black;
-    padding-left: 30px;
-
-}
