--- a/style-600.css
+++ b/style-600.css
@@ -7,19 +7,22 @@ a {
     color: #000;
 }
 
+a:hover{
+    color: #75FB94
+}
+
 
 .principal {
-    /* background-image: url(/imagens/fundo.png); */
+    background-image: url(/imagens/fundo.png);
     background-size: cover;
     background-color: #000;
     background-repeat: no-repeat;
     background-position: center;
-    display: block;
-    flex-direction: row;
+    display: flex;
+    flex-direction: column;
     height: 100vh;
     font-family: 'Fira Sans', sans-serif;
     padding: 20px;
-
 
 }
 
@@ -36,8 +39,8 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: -1;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1;
 }
 
 /* .esquerda {
@@ -89,7 +92,7 @@ a {
 }
 
 .direita {
-    margin-top: 140px;
+    margin-top: 40px;
     left: 0;
     align-items: flex-start;
     display: flex;
@@ -141,11 +144,13 @@ a {
 }
 
 .rodape {
-    display: none;
+    display: block;
     background-color: #fff;
     font-family: 'Fira Sans', sans-serif;
     padding: 1rem;
-    justify-items: center;
+    justify-content: space-between;
+
+
 
 }
 
@@ -156,7 +161,7 @@ a {
 
 
 .rodape i{
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin-left: 10px;
     margin-bottom: 30px;
 }   
