--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ a {
     color: #000;
 }
 
+.rodape i:hover {
+    transition: 0.8s;
+    transform: rotate3d(0, 0, 1, 360deg);
+}
+
 
 .principal {
     background-image: url(/imagens/fundo.png);
@@ -68,8 +73,8 @@ a {
     font-weight: 400;
 }
 .esquerda .titulo-master span {
-    font-size: 2.3rem;
-    line-height: 0;
+    font-size: 1.5rem;
+    line-height: 1.5;
     padding: 0;
     margin: 0;
 
@@ -79,7 +84,7 @@ a {
 
 .texto {
     padding: 0 3rem 0 0;
-    font-size: 1.6rem;
+    font-size: 2rem;
     font-weight: 400;
     width: 450px;
     color: #fff;
@@ -153,6 +158,9 @@ a {
 .rodape i{
     font-size: 2rem;
     margin-left: 10px;
+    padding: 10px;
+    background-color: #75FB94;
+
 }
 
     
@@ -192,10 +200,19 @@ a {
     padding-left: 20px;
 }
 
+.apoio-realizacao .grupo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px;
+}
+
 .apoio-realizacao img {
-    background-color: black;
-    width: 150px;
+    /* width: 60px; */
+    height: 50px;
     margin: 10px 0 10px 0;
+    padding: 5px;
 }
 
 
